  a variable to use inline assembler - that's faster and less code. (THH)

2008-01-06
- include/config.h: STOP instruction will now be used by default when a
  TOS version >= 2.00 is compiled. (THH)
- bios/clock.c: Got rid of RTC_TOS_VER - the year offset in the NVRAM is now
  autodetected. (THH)
- vdi/vdi_mouse.c: Fixed off-by-one bug in VDI mouse driver. (THH)

2008-01-21
- include/biosbind.h bdos/fs.h: Added support for the extended Rwabs call,
  with lrecno parameter. (THH)

2008-02-07
- bdos/time.c bios/clock.c: Cleaned up and fixed BIOS and GEMDOS time and
  date functions, IKBD clock basically works now, too. (THH)

* Release: 0.8.3

2008-03-26
- bios/clock.c: EmuTOS did not work on STonX anymore due to a bug in the RTC
  detection. (THH)

2008-06-11
- bdos/fsmain.c: Dsetdrv returned an error code in case the specified drive
  number was invalid. However, it must return the drive mask of the available
  drives instead. (THH)
- bdos/floppy.c bdos/acsi.c: According to the Profibuch and Scheibenkleister,
  the DMA address registers must be written in a certain order. (THH)

2008-06-13
- bios/chardev.c bios/kprint.c bios/mfp.c: Added experimental support for the
  MFP UART input and output. (THH)
- bios/floppy.c bios/acsi.c: The timeout_gpip() function was declared twice,
  in acsi.c and floppy.c. Merged them now into one function only. Thanks to
  Jens Caroll for the hint! (THH)

2008-09-17
- bios/machine.c: Fixed cookies setup: _SWI cookie was never initilized, and
  in the _SND cookie the DMA sound bit was never set. (THH)

2008-09-29
- cli/command.c: Check for valid drive when running the SHOW command. (THH)

2008-10-03
- cli/command.c:
   -> Declared local functions and variables as static. (patch by E. Tamminen)
   -> Reworked the help texts. (patch by E. Tamminen)
   -> Removed command aliases ERA and INIT. (THH)

2008-10-29
- bios/parport.c: Fixed return value of bcostat0 (thanks to David Savinkoff
  for the hint) (THH)